# gc-lib

./: CMakeLists.txt  README.md
cmake/: FindCatch2.cmake
include/gc/: gc.h  log.h  minunit.h  thread-pool.h
src/: gc.cpp  log.cpp
tests/: test.cpp  test_gc.c
